--- a/index.html
+++ b/index.html
@@ -5,17 +5,10 @@
 		<title>My Coooll Site</title>
 	</head>
  
-	<body background="bg.png">
-			<input placeholder="Введите что то-зачем то"<br>
-			<h1>Мой Круутой Сайт!</h1> 
-            <img src="bg.png" height="50px">
-			<img src="bg.png" height="50px">
-			<img src="bg.png" height="50px">
-			<img src="bg.png" height="50px">
-			<img src="bg.png" height="50px">
-			<img src="bg.png" height="50px">
-			<img src="bg.png" height="50px">
-			<img src="https://i.pinimg.com/originals/43/37/a4/4337a4be75e9ae8cfc1af605dd4bdc00.gif" height="350px">
+	<body background-color="">
+			<input placeholder="Введите что то-зачем то" <br>
+			<h1>Мой Круутой Сайт!</h1> 			
+			<img src="https://i.pinimg.com/originals/43/37/a4/4337a4be75e9ae8cfc1af605dd4bdc00.gif" height="350px" target=right>
 			<h2>Прикольные сайты:</h2>
 			<a href="https://www.youtube.com" target="_black">YouTube</a><br><blank>
 			<a href="https://www.newgrounds.com" target="_black">Newgrounds</a><blank>
