--- a/my cooooll site/index.html
+++ b/my cooooll site/index.html
@@ -5,16 +5,9 @@
 		<title>My Coooll Site</title>
 	</head>
  
-	<body background="bg.png">
+	<body background-color="#00ff00">
 			<input placeholder="Введите что то-зачем то"<br>
 			<h1>Мой Круутой Сайт!</h1> 
-            <img src="bg.png" height="50px">
-			<img src="bg.png" height="50px">
-			<img src="bg.png" height="50px">
-			<img src="bg.png" height="50px">
-			<img src="bg.png" height="50px">
-			<img src="bg.png" height="50px">
-			<img src="bg.png" height="50px">
 			<img src="https://i.pinimg.com/originals/43/37/a4/4337a4be75e9ae8cfc1af605dd4bdc00.gif" height="350px">
 			<h2>Прикольные сайты:</h2>
 			<a href="https://www.youtube.com" target="_black">YouTube</a><br><blank>
