--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<title>My Coooll Site</title>
 	</head>
  
-	<body background-color="">
+	<body background-color="#00ff00">
 			<input placeholder="Введите что то-зачем то" <br>
 			<h1>Мой Круутой Сайт!</h1> 			
 			<img src="https://i.pinimg.com/originals/43/37/a4/4337a4be75e9ae8cfc1af605dd4bdc00.gif" height="350px" target=right>
