--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<body background-color:#00ff00>
 			<input placeholder="Введите что то-зачем то" <br>
 			<h1>Мой Круутой Сайт!</h1> 			
-			<img src="https://i.pinimg.com/originals/43/37/a4/4337a4be75e9ae8cfc1af605dd4bdc00.gif" height="350px" align=right>
+			<img src="https://i.pinimg.com/originals/43/37/a4/4337a4be75e9ae8cfc1af605dd4bdc00.gif" height="350px" style="float:right>
 			<h2>Прикольные сайты:</h2>
 			<a href="https://www.youtube.com" target="_black">YouTube</a><br><blank>
 			<a href="https://www.newgrounds.com" target="_black">Newgrounds</a><blank>
