--- a/index.html
+++ b/index.html
@@ -31,5 +31,7 @@
 				<a href="https://www.youtube.com" target="_black">YouTube</a>
 			</button><br>
 			
+			<OBJECT classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" codebase="http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=9,0,0,28;" WIDTH=500 HEIGHT=300><PARAM NAME=movie VALUE="yt b.swf"> <PARAM NAME=quality VALUE=high> <PARAM NAME=bgcolor VALUE="#FFFFFF"><param name="allowFullScreen" value="true" ><EMBED src="home.swf" allowfullscreen="true" quality=high bgcolor="#FFFFFF"  WIDTH=1023 HEIGHT=767 TYPE="application/x-shockwave-flash" PLUGINSPAGE="http://www.macromedia.com/shockwave/download/index.cgi?P1_Prod_Version=ShockwaveFlash"></EMBED></OBJECT>
+			
 	</body>
 </html>
